--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
         <div>
             <p>
                 <br>
-                <br>This App uses Opensea API
+                <br>Tips for my Toaster Fund: 0x84FdD7872010130ff5337a224771D503b289CBe2
+                <br>
+                <br>This App uses Opensea's Public API <a href="https://opensea.io/collection/san-origin">SAN Origin Collection on Opensea</a>
+                <br>
                 <br>
             </p>
         </div>
