modified:   index.html

--- a/index.html
+++ b/index.html
@@ -75,14 +75,13 @@
             <h2>Dynamic Brilliance Traits</h2>
             <p>No information released yet...</p>
         </div>
-        <br>
-        <br>
         <div>
             <p>
                 <br>
-                <br>Tips for my Toaster Fund: 0x84FdD7872010130ff5337a224771D503b289CBe2
+                Tips for my Toaster Fund: 0x84FdD7872010130ff5337a224771D503b289CBe2
                 <br>
-                <br>This App uses Opensea's Public API <a href="https://opensea.io/collection/san-origin">SAN Origin Collection on Opensea</a>
+                <br>
+                This App uses Opensea's Public API <a href="https://opensea.io/collection/san-origin">SAN Origin Collection on Opensea</a>
                 <br>
                 <br>
             </p>
