modified:   index.html updated the unbound rewards to the latest info

--- a/index.html
+++ b/index.html
@@ -408,7 +408,9 @@
             console.log("Not Soulbound")
             soulBoundRewardsTitle.textContent = "Soul Bound Rewards: 0三Unbound";
             soulBoundRewardsList.innerHTML += `
-            <li class="generatedContent list-group-item bg-transparent">Event Access — Unbound NFT holders (holders who are not soulbound) will receive ticket discounts to all events, provided they hold 3 or more NFTs.</li>
+            <li class="generatedContent list-group-item bg-transparent">Event Access — Unbound NFT holders (holders who are not soulbound) will receive ticket discounts to all events, provided they hold 3 or more NFTs.</li>   
+            <li class="generatedContent list-group-item bg-transparent">SAN Sound Platform — Can claim a 1 month trial</li>
+            <li class="generatedContent list-group-item bg-transparent">Governance Token — Share in 1% of Initial Token Supply</li>
             `;
         }
 
