modified:   index.html new file:   tokendroptool.html
added a new tool and added a nav bar

--- a/index.html
+++ b/index.html
@@ -21,12 +21,17 @@
         background-position: center top;
         height:100vh;
         ">
+    <nav class="navbar sticky-top navbar-expand navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html" style="padding-left: 20px;">Brilliance</a>
+        <a class="navbar-brand" href="tokendroptool.html">Airdrop</a>
+    </nav>
 
     <div class="container" style="background-color: rgba(211, 211, 211, 0.9);">
         <br>
         <h1 class="text-center">Brilliance Trait Checker</h1>
         <div class="text-center">
-            (This tool is not guaranteed to be accruate. Make sure to verify with project documents and on chain
+            (This tool is not guaranteed to be accruate. Make sure to verify with project <a
+                href="https://medium.com/@sansound">documents</a> and on chain
             data.)
         </div>
         <br>
@@ -115,6 +120,7 @@
 
         <div>
             <p>
+                <br>
                 <br>
                 Tips for my Toaster Fund: 0x84FdD7872010130ff5337a224771D503b289CBe2
                 <br>
