modified:   tokendroptool.html fixed error display

--- a/tokendroptool.html
+++ b/tokendroptool.html
@@ -225,7 +225,7 @@
 
 
             } else {
-                calculatorResults.innerHTML += `<p class="generatedContent">Need to Soulbind NFT to Level 2 or higher to recieve airdrop</p>`;
+                calculatorResults.innerHTML += `<li class="generatedContent list-group-item bg-transparent">Need to Soulbind NFT to Level 2 or higher to recieve airdrop!</li>`;
             }
 
 
