modified:   tokendroptool.html added semi colon

--- a/tokendroptool.html
+++ b/tokendroptool.html
@@ -213,7 +213,7 @@
                     }
                 }
 
-                args.push(totalBaseAmount)
+                args.push(totalBaseAmount);
                 calculatorResults.innerHTML += `<li class="generatedContent list-group-item bg-transparent">Total Estimate: ${multiply(...args)} AMPS</li>
                 <li class="generatedContent list-group-item bg-transparent">Total Base Amount: ${totalBaseAmount}</li>
                 <li class="generatedContent list-group-item bg-transparent">Multipliers: ${args.slice(0, -1)}</li>
