--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         ">
     <nav class="navbar sticky-top navbar-expand navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html" style="padding-left: 20px;">Brilliance</a>
-        <a class="navbar-brand" href="tokendroptool.html">Airdrop</a>
+        <a class="navbar-brand" href="tokendroptool.html">Airdrop (Beta)</a>
     </nav>
 
     <div class="container" style="background-color: rgba(211, 211, 211, 0.9);">
