--- a/tokendroptool.html
+++ b/tokendroptool.html
@@ -157,7 +157,7 @@
             let citizen = data.collection.traits["Soulbound Level"]["1三citizen"];
             let airDrop = 555000 / (unbound + citizen);
             unboundAirDropTotal.innerHTML += `
-                <li class="list-group-item bg-transparent">${airDrop} Airdrop per Citizen or Unbound SAN held</li>
+                <li class="list-group-item bg-transparent">${airDrop.toFixed(2)} Airdrop per Citizen or Unbound SAN held</li>
                 <li class="list-group-item bg-transparent"> ${unbound} Unbound SAN Remaing</li>
                 <li class="list-group-item bg-transparent">${citizen} Level 1三Citizen Souldbound</li>`;
 
@@ -298,7 +298,7 @@
                 return result.toFixed(2);
             }
         }
-        
+
         function clearGeneratedContent() {
             while (generatedContent.length > 0) {
                 generatedContent[0].parentNode.removeChild(generatedContent[0]);
