modified:   index.html 	modified:   tokendroptool.html  fixed error in syntax for gold multiplier

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                             brillianceTraits.innerHTML += `<li class="generatedContent list-group-item  bg-transparent">Touching Grass — No Fomo, Auto-whitelisting. No stress, bro.</li>`;
                             break;
                         case "Tokens Gold":
-                            tokenMultiplier.innerHTML += `<li class="generatedContent list-group-item  bg-transparent">Gold Tokens — 1.3x Governance Multiplier (Limited to 3).*</li>`;
+                            brillianceTraits.innerHTML += `<li class="generatedContent list-group-item  bg-transparent">Gold Tokens — 1.3x Governance Multiplier (Limited to 3).*</li>`;
                             break;
                         case "Tokens Silver":
                             brillianceTraits.innerHTML += `<li class="generatedContent list-group-item  bg-transparent">Silver Tokens — 1.1x Governance Multiplier (Limited to 3).*</li>`;
