--- a/tokendroptool.html
+++ b/tokendroptool.html
@@ -205,6 +205,7 @@
             var args = [];
 
             clearGeneratedContent();
+            findSoulboundHolders();
             getSoulboundMultipliers();
             getTraitMultipliers();
             updatePage();
@@ -228,17 +229,17 @@
                     quadraticMultiplier(highThree, sameLvlAs);
                     args.push(lvlThreeMultiplier);
                     if (lvlTwo > 0) {
-                        quadraticMultiplier(lvlTwo, twoLvlBelow);
+                        quadraticMultiplier(lvlTwo, oneLvlBelow);
                     }
                     if (lvlOne > 0) {
-                        quadraticMultiplier(lvlOne, threeLvlBelow)
+                        quadraticMultiplier(lvlOne, twoLvlBelow)
                     }
                 } else if (lvlTwo > 0) {
                     let highTwo = lvlTwo - 1;
                     quadraticMultiplier(highTwo, sameLvlAs);
                     args.push(lvlTwoMultiplier);
                     if (lvlOne > 0) {
-                        quadraticMultiplier(lvlOne, threeLvlBelow)
+                        quadraticMultiplier(lvlOne, oneLvlBelow)
                     }
 
                 }
@@ -310,14 +311,35 @@
                 generatedContent[0].parentNode.removeChild(generatedContent[0]);
             }
         }
+        //testing grabing metadata by holder address
+        const soulboundholders = [
+            0x2fa105ace88d22060d06f50ed16f04ad74762dad, //koa
 
-        
+        ];
+
+        function findSoulboundHolders() {
+
+            const options = { method: 'GET', headers: { accept: 'application/json' } };
+
+            fetch('https://api.opensea.io/api/v1/assets?collection=san-origin&order_direction=desc&limit=20&include_orders=false', options)
+                .then(response => response.json())
+                .then(response => console.log(response))
+                .catch(err => console.error(err));
+
+
+            /*fetch("/nft-owners")
+              .then(response => response.json())
+              .then(data => {
+                console.log(data);
+              });*/
+
+
+        }
 
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
 </body>
-
 
 </html>
